document ready function added to fix uncaught type error

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 				</form>
 			</div>
 
+<!--where the map will go/should-->
+			<div class="map"><p>Map Goes here</p></div>
+
 <!--- menu form for extra information-->
 			<div id="results-menu">
 				<p id="added-funk">Added Functionality</p>
@@ -38,7 +41,6 @@
 					</fieldset>
 				</form>
 			</div>
-
 
 			<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 			<script async defer
