--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 
 <!--where the map will go/should-->
-			<div class="map"><p>Map Goes here</p></div>
+			<div id="map"></div>
 
 <!--- menu form for extra information-->
 			<div id="results-menu">
@@ -43,10 +43,8 @@
 			</div>
 
 			<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-			<script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWNt1eiLCLkuGMqDv24cfgZre_U_k_oBs&callback=init">
-    </script>
 			<script type="text/javascript" src="js-index.js"></script>
+			<script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWNt1eiLCLkuGMqDv24cfgZre_U_k_oBs"></script>
 		</main>
 </body>
 </html>
