--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 			<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 			<script type="text/javascript" src="js-index.js"></script>
-			<script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWNt1eiLCLkuGMqDv24cfgZre_U_k_oBs"></script>
+			<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWNt1eiLCLkuGMqDv24cfgZre_U_k_oBs"></script>
 		</main>
 </body>
 </html>
