date selection working, markers for old selection not disappearing though

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<legend>Search a Future Date</legend>
 				<p>Want to plan ahead? Find out where the crowds will be 
 				by searching for a specific date in the future.</p>
-				<input id="future-date-input" type=date aria-label="future-date-input"  required="required"placeholder="MM-DD-YYYY">
+				<input id="future-date-input" type=date aria-label="future-date-input" placeholder="MM-DD-YYYY">
 				<input id="future-date" class="js-future-date" type="submit" aria-label="future-date">
 			</fieldset>
 		</form>
@@ -60,6 +60,7 @@
 
 			<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 			<script type="text/javascript" src="js-index.js"></script>
+			<script type="text/javascript" src="moment.js"></script>
 			<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWNt1eiLCLkuGMqDv24cfgZre_U_k_oBs&callback=init"></script>
 		</main>
 </body>
