--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<div id="map" hidden></div>
 
 			<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-			<script type="text/javascript" src="js-index.js"></script>
+			<script type="text/javascript" src="script.js"></script>
 			<script type="text/javascript" src="moment.js"></script>
 			<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWNt1eiLCLkuGMqDv24cfgZre_U_k_oBs&callback=init"></script>
 		</main>
