--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="description" content="API hack">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Crowd Control</title>
+	<link href="reset.css" rel="stylesheet" type="text/css">
 	<link href="main.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Pragati+Narrow" rel="stylesheet">
 </head>
