minor css changes to buttons, comments added in script, slight reformatting of html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</form>
 				<br>
 				<form id="new-location-form" action="" method="get">
-					<fieldset>
+					<fieldset id="new-location-fieldset">
 						<legend>Search a New City</legend>
 						<p>
 							Want to see where the crowds are in a different
@@ -64,17 +64,11 @@
 				</form>
 					</div>
 			</div>
-
-
-
 			<!-- Button to close the overlay navigation -->
 
 			<span class="open-nav">☰ Open</span>
 
-
-
-
-			<!--where the map will go/should-->
+			<!--map-->
 
 			<div id="map" hidden></div>
 
