submit button edits

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<p id="or">------ or ------</p>
 							<p id="location-text">Enter your location here:</p>
 							<input id="location-input" class="location-input" type="text" required="required" aria-label="location">
-							<input id="submit-location-button" class="submit-location-button" type="submit" value="Go" aria-label="submit-location">
+							<input id="submit-location-button" class="submit-location-button" type="submit" value="Submit" aria-label="submit-location">
 						</fieldset>
 					</form>
 				</div>
